; ModuleID = '/home/carl/AnghaBench/git/extr_dir.c_add_untracked_cache.c'
source_filename = "/home/carl/AnghaBench/git/extr_dir.c_add_untracked_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @add_untracked_cache(%struct.index_state* %0) #0 {
  %2 = alloca %struct.index_state*, align 8
  store %struct.index_state* %0, %struct.index_state** %2, align 8
  %3 = load %struct.index_state*, %struct.index_state** %2, align 8
  %4 = getelementptr inbounds %struct.index_state, %struct.index_state* %3, i32 0, i32 0
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %1
  %8 = load %struct.index_state*, %struct.index_state** %2, align 8
  %9 = call i32 @new_untracked_cache(%struct.index_state* %8)
  br label %24

10:                                               ; preds = %1
  %11 = load %struct.index_state*, %struct.index_state** %2, align 8
  %12 = getelementptr inbounds %struct.index_state, %struct.index_state* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ident_in_untracked(i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %23, label %16

16:                                               ; preds = %10
  %17 = load %struct.index_state*, %struct.index_state** %2, align 8
  %18 = getelementptr inbounds %struct.index_state, %struct.index_state* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = call i32 @free_untracked_cache(i32 %19)
  %21 = load %struct.index_state*, %struct.index_state** %2, align 8
  %22 = call i32 @new_untracked_cache(%struct.index_state* %21)
  br label %23

23:                                               ; preds = %16, %10
  br label %24

24:                                               ; preds = %23, %7
  ret void
}

declare dso_local i32 @new_untracked_cache(%struct.index_state*) #1

declare dso_local i32 @ident_in_untracked(i32) #1

declare dso_local i32 @free_untracked_cache(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
